# Esp32-Voice-Assistant

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  monitor_inventory.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_sr.c  app_ui.c  app_ui.h  cloud_asr.c  cloud_asr.h  cloud_llm.c  cloud_llm.h  esp32_s3_szp.h  inventory.c  main.c  notify.c  notify.h  parser.c  recipe.c  storage.c  sync.c  sync_config.h  tts.c  ui_inventory.c  ui_inventory.h  wifi.c  wifi.h  wifi_config.h
main/bt/: ble_hidd_demo.c
xiaobin/: sdkconfig  sdkconfig.defaults
xiaobin/main/: app_sr.c  app_ui.c  cloud_asr.c  cloud_asr.h  cloud_llm.c  esp32_s3_szp.c  inventory.c  inventory.h  parser.h  recipe.h  recipe_config.h  storage.h  sync.h  tts.h  tts_config.h  wifi_config.h
